--- a/Video15/simple-page.html
+++ b/Video15/simple-page.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="application/javascript" src="video13.js"></script>
+    <!-- TODO change the name of script you want to run -->
+    <script type="application/javascript" src="video15.js"></script>
 </head>
 <body>
     <b>Press F12 to open Dev Tools</b>
