--- a/video13/simple-page.html
+++ b/video13/simple-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="application/javascript" src="video13.js"></script>
+    <script type="application/javascript" src="video13_binary.js"></script>
 </head>
 <body>
     <b>Press F12 to open Dev Tools</b>
