--- a/Video16/simple-page.html
+++ b/Video16/simple-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- TODO change the name of script you want to run -->
-    <script type="application/javascript" src="video15-palindrome.js"></script>
+    <script type="application/javascript" src="video16.js"></script>
 </head>
 <body>
     <b>Press F12 to open Dev Tools</b>
